# pdf-reader-api

./: .swp  README.md  criar_banco.txt  dados_grafico.json  fake_data.json  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt
leitorPdf/: LeitorFinal.py
sql_app/: models.py
src/: constants.py  database.py  graphic.py  main.py  models.py  schemas.py  security.py  settings.py  utils.py
src/fines/graphs/: colors.py  constants.py
src/fines/graphs/create_data/: __init__.py  retonar_dados_enquadramento.py  retornar_dados_data_da_infracao.py  retornar_dados_marca.py  retornar_dados_natureza.py  retornar_dados_velocidade_regulamentada.py
src/fines/graphs/tests/: test_color.py
src/fines/readers/: extract_data.py  reader.py
src/fines/utils/: utils.py
src/functions/: LeitorFinal.py  colors.py  consultaInfracao.csv  contador.py  contadores.py  extrair_dados.py  grafico.py  leitor_final.py
src/functions/utils/: utils.py
src/sql_app/: fake_data.py
src/tests/: conftest.py  test_app.py  test_security.py
