[tool.poetry]
name = "pdf-reader-api"
version = "0.1.0"
description = "Utilizando Poetry Para Gerenciar todas as depedencias(bibliotecas ou pacotes) necessarios"
authors = ["MuriWolf <murillopo06@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pypdf = "^4.2.0"
SQLAlchemy = "^2.0.34"
typing_extensions = "^4.9.0"
fastapi = "^0.115.1"
pydantic = "^2.9.1"
pydantic_core = "^2.23.3"
pydantic-settings = "^2.5.9"
pwdlib = "^0.2.0"
jwt = "^1.3.0"
cryptography = "^43.0.1"
plotly = "^5.24.1"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
